# tracker_viewer

./: .gitignore  PROD_DEPLOY.md  README.md
backend/: .env.example  CSV_Parser_Result.py  README.md  pyproject.toml
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_add_job_progress.py  0003_add_trip_dedup_columns.py  0004_add_job_content_hash.py  0005_add_email_verification.py  0006_make_latlng_optional.py  0007_add_remaining_telemetry_fields.py  0008_pwm_float.py  0009_add_trip_sharing.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  jobs.py  public.py  telemetry.py  trips.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py  session.py
backend/app/middleware/: csrf_guard.py  rate_limit.py
backend/app/models/: __init__.py  base.py  email_verification.py  job.py  telemetry.py  trip.py  user.py
backend/app/repositories/: base_repo.py  telemetry_repo.py  trip_repo.py  user_repo.py
backend/app/schemas/: job.py  telemetry.py  trip.py  user.py
backend/app/services/: auth_service.py  email_service.py  job_service.py  parser_service.py  trip_service.py
backend/app/tests/: conftest.py  test_auth.py  test_email_verification.py  test_parser.py  test_telemetry_schemas.py  test_trip_dedup.py  test_trips_upload.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+32 files in other folders)
