[project]
name = "gps-log-tracker-backend"
version = "0.1.0"
description = "GPS Trip Tracker Backend - FastAPI with TimescaleDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1.0",
    "asyncpg>=0.30.0,<0.31.0",
    "alembic>=1.14.0,<1.15.0",
    "pydantic>=2.10.0,<2.11.0",
    "pydantic-settings>=2.6.1,<2.7.0",
    "python-jose[cryptography]>=3.3.0,<3.4.0",
    "passlib[bcrypt]>=1.7.4,<1.8.0",
    "python-multipart>=0.0.19,<0.0.20",
    "redis>=5.2.1,<5.3.0",
    "celery[redis]>=5.4.0,<5.5.0",
    "slowapi>=0.1.9,<0.2.0",
    "httpx>=0.28.0,<0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]